--- a/index.html
+++ b/index.html
@@ -201,7 +201,11 @@
         userName.style.outline= "2px solid red";
         pass_word.style.outline = "2px solid red";
         userName.focus();
-        valid.style.display = "block";
+       valid.style.display = "block";
+         function hide(){
+        valid.style.display = "none";
+  }
+     setTimeout(hide(),2000);
         // alert("Incorrect Details")
         userName.value='';
         pass_word.value='';
