--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
          function hide(){
         valid.style.display = "none";
   }
-     setTimeout(hide(),2000);
+     setTimeout(hide,2000);
         // alert("Incorrect Details")
         userName.value='';
         pass_word.value='';
