--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
         userName.focus();
        valid.style.display = "block";
          function hide(){
-        valid.style.display = "none";
+        valid.style.visibility = "hidden";
   }
-     setTimeout(hide,2000);
+     setTimeout(hide,5000);
         // alert("Incorrect Details")
         userName.value='';
         pass_word.value='';
