--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@
        valid.style.display = "block";
          function hide(){
         valid.style.visibility = "hidden";
+        userName.style.border= "none";
+        pass_word.style.border = "none";
+        userName.style.outline= "none;
+        pass_word.style.outline = "none";
   }
      setTimeout(hide,5000);
         // alert("Incorrect Details")
