--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         userName.focus();
        valid.style.display = "block";
          function hide(){
-        valid.style.visibility = "hidden";
+        valid.style.display = "none";
         userName.style.border= "none";
         pass_word.style.border = "none";
         userName.style.outline= "none;
