--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         valid.style.display = "none";
         userName.style.border= "none";
         pass_word.style.border = "none";
-        userName.style.outline= "none;
+        userName.style.outline= "none";
         pass_word.style.outline = "none";
   }
      setTimeout(hide,5000);
