--- a/index.html
+++ b/index.html
@@ -202,7 +202,10 @@
         pass_word.style.outline = "2px solid red";
         userName.focus();
        valid.style.display = "block";
-         function hide(){
+        
+
+
+    function hide(){
         valid.style.display = "none";
         userName.style.border= "none";
         pass_word.style.border = "none";
@@ -217,7 +220,7 @@
  	else if (userName.value == admin || pass_word.value == pass ) {
  		
         userName.style.border= "5px solid green";
-        pass_word.style.border = "5px solid green"
+        pass_word.style.border = "5px solid green";
         valid.style.display = "none";
         alert("✳️👍Login Successfully👍✳️");
         content_table.style.display = "block" ;
