--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 <body onoffline="offline()" ononline="online()">
 	
 	<div class="container" id="form_container">
+                 <div id="success" >Login Successfully </div>
 		<div id="check" >Incorrect details !</div>
 	<form class="login_form" id="form" name="form">
 	<br>
@@ -184,7 +185,8 @@
  function validate() {
  	let content_table=document.getElementById('content');
 	let btn_table=document.getElementById('button');
-	let valid=document.getElementById('check');
+	let invalid=document.getElementById('check');
+        let valid=document.getElementById('success');
 	let loginpage=document.getElementById('form_container');
    let userName=document.getElementById('uname');
    let pass_word=document.getElementById('password');
@@ -201,7 +203,7 @@
         userName.style.outline= "2px solid red";
         pass_word.style.outline = "2px solid red";
         
-       valid.style.display = "block";
+       invalid.style.display = "block";
         
 
 
@@ -220,13 +222,16 @@
  	}
  	else if (userName.value == admin || pass_word.value == pass ) {
  		
-        userName.style.border= "5px solid green";
-        pass_word.style.border = "5px solid green";
-        valid.style.display = "none";
-        alert("✳️👍Login Successfully👍✳️");
+        userName.style.border= "4px solid green";
+        pass_word.style.border = "4px solid green";
+        valid.style.display = "block";
+        //alert("✳️👍Login Successfully👍✳️");
+        function show(){
         content_table.style.display = "block" ;
           btn_table.style.display = "block";
           loginpage.style.display= "none";
+        }
+      setTimeout(show,4000);
  	}
  	else{
        alert("SYSTEM ERROR ! !")
