--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
  	}
  	else if (userName.value == admin || pass_word.value == pass ) {
  		
-        userName.style.border= "4px solid green";
-        pass_word.style.border = "4px solid green";
+        userName.style.border= "4px solid #29f013";
+        pass_word.style.border = "4px solid #29f013";
         valid.style.display = "block";
         //alert("✳️👍Login Successfully👍✳️");
         function show(){
