--- a/index.html
+++ b/index.html
@@ -208,14 +208,14 @@
 
 
     function hide(){
-        valid.style.display = "none";
+        invalid.style.display = "none";
         userName.style.border= "none";
         pass_word.style.border = "none";
         userName.style.outline= "none";
         pass_word.style.outline = "none";
        userName.focus();
   }
-     setTimeout(hide,3000);
+     setTimeout(hide,2000);
         // alert("Incorrect Details")
         userName.value='';
         pass_word.value='';
