--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  
   
 	<title>Jummah chart</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Tiro+Tamil:ital@1&display=swap" rel="stylesheet">
@@ -152,7 +153,7 @@
 <body onoffline="offline()" ononline="online()">
 	
 	<div class="container" id="form_container">
-                 <div id="success" >Login Successfully </div>
+                 <div id="success" >Login Successfully<i class="fa fa-refresh fa-spin"></i></div>
 		<div id="check" >Incorrect details !</div>
 	<form class="login_form" id="form" name="form">
 	<br>
