--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <body onoffline="offline()" ononline="online()">
 	
 	<div class="container" id="form_container">
-                 <div id="success" >Login Successfully<i class="fa fa-refresh fa-spin"></i></div>
+                 <div id="success" >Login Successfully...  <i class="fa fa-spinner fa-spin"></i></div>
 		<div id="check" >Incorrect details !</div>
 	<form class="login_form" id="form" name="form">
 	<br>
