--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 	
 	<div class="container" id="form_container">
                  <div id="success" >Login Successfully...  <i class="fa fa-spinner fa-spin"></i></div>
-		<div id="check" >Incorrect details !</div>
+		<div id="check" >Incorrect details ! <i class="fa fa-circle-o-notch fa-spin"></i></div>
 	<form class="login_form" id="form" name="form">
 	<br>
 
@@ -232,7 +232,7 @@
           btn_table.style.display = "block";
           loginpage.style.display= "none";
         }
-      setTimeout(show,4000);
+      setTimeout(show,5000);
  	}
  	else{
        alert("SYSTEM ERROR ! !")
