--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 	
 	<div class="container" id="form_container">
                  <div id="success" >Login Successfully...  <i class="fa fa-spinner fa-spin"></i></div>
-		<div id="check" >Incorrect details ! <i class="fa fa-circle-o-notch fa-spin"></i></div>
+		<div id="check" >Incorrect details ! <i class="fa fa-refresh fa-spin"></i></div>
 	<form class="login_form" id="form" name="form">
 	<br>
 
