--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 			background-color: black !important;
 			color: white !important;
 			font-weight: bolder;
+                       text-align: center !important;
 			font-size: 30px !important;
 			border: 2px solid black !important;
 		}
