--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			color: white;
 			font-weight: bolder;
 			font-size: 30px !important;
-			text-align: center;
+			text-align: center !important;
       margin-top: 0;
 		}
 
@@ -1084,7 +1084,7 @@ function online(){
 
 </script>
  <footer>
-	<cite style="font-weight:bolder;">tntj©copyright2022</cite>
+	<cite style="font-weight:bolder;">©️ Copywrite - TNTJ THANJAI SOUTH 2022</cite>
 </footer> 
 </body>
 </html>
