--- a/index.html
+++ b/index.html
@@ -199,11 +199,10 @@
  	if (userName.value != admin || pass_word.value != pass ) {
  		userName.style.border= "2px solid red";
         pass_word.style.border = "2px solid red";
-        userName.style. animation = "shake 0.2s ease-in-out 0s 2";
-        
-        pass_word.style.animation="shake 0.2s ease-in-out 0s 2";
         userName.style.outline= "2px solid red";
         pass_word.style.outline = "2px solid red";
+        userName.style. animation = "shake 0.2s ease-in-out 0s 2";
+        pass_word.style.animation="shake 0.2s ease-in-out 0s 2";
         invalid.style.animation= "shake 0.2s ease-in-out 0s 2";
        invalid.style.display = "block";
         
@@ -1090,7 +1089,7 @@ function online(){
 
 </script>
  <footer>
-	<cite style="font-weight:bolder;">tntj©copyright2022</cite>
+	<cite style="font-weight:bolder;">  ©️ Copywrite - TNTJ THANJAI SOUTH©️2022</cite>
 </footer> 
 </body>
 </html>
