--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
 		
 		
 		<tr>
-			<th colspan="4" id="tntj" >தாயிக்கள் தொடர்பான தகவல்களுக்கு - 9944191505</th>
+			<th colspan="4" id="tntj" >தாஃயிக்கள் தொடர்பான தகவல்களுக்கு - 9944191505</th>
 		</tr>
 <tr>
    <th colspan="4" style="background-color: #312542;"><img src="jummah.JPG" alt="Jummah img" style="max-width:100%;height:auto;"></th>
