--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
 	<button id="button" onclick="printing();">DOWNLOAD PDF!</button>
 </center>
  <footer>
-	<cite style="font-weight:bolder;">  ©️ Copywrite - TNTJ THANJAI SOUTH©️2022</cite>
+	<cite style="font-weight:bolder;">  ©️ Copyright - TNTJ THANJAI SOUTH©️2022</cite>
 </footer> 
 </body>
 </html>
