--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" type="text/css" href="loginpage.css">
 </head>
 <body onoffline="offline()" ononline="online()">
+    <div class="bg-image"></div>
 	<!-- loginpage -->
 	<div class="container" id="form_container">
 		<!-- success message -->
