--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<td>ஆவணம் - 9566336108 </td>
 			<td >12:30 - 01:00</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
 				<option>MISc Student - 8526132121</option>
@@ -121,7 +121,7 @@
 			<td>அதிரை 1 - 9894906011</td>
 			<td>12:30 - 01:10</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
         			<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>MISc Student - 8526132121</option>
@@ -167,7 +167,7 @@
 			<td>அதிரை 2 - 9629533887</td>
 			<td>12:30 - 01:15</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>MISc Student - 8526132121</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -213,7 +213,7 @@
 			<td>அம்மாபேட்டை - 9952538849</td>
 			<td>12:45 - 01:15</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>ஹஃபீல் B.Tech - 9384656794</option>
 				<option>அம்ஜத்கொன் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -259,7 +259,7 @@
 			<td>அம்மாபேட்டை ரயிலடி 9487910796 </td>
 			<td>12:45 - 01:15</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
  				<option>ஆபிதீன் B.A - 9566788134</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -306,7 +306,7 @@
 			<td>ஈஸ்வரி நகர் - 9791904549 </td>
 			<td>01:00 - 01:30</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
  				<option>செய்யத் முஸ்தபா B.Tech - 9715113441</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -354,7 +354,7 @@
 			<td> கண்டியூர் - 8270348485</td>
 			<td>12:45 - 01:15</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
  				<option>அப்துல் ஹமீத் - 9789704924</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -402,7 +402,7 @@
 			<td>கருப்புர் - 9952862782 </td>
 			<td>01:10 - 01:40</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>ஜாபர் அலி - 9361384359</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -449,7 +449,7 @@
 			<td>மதுக்கூர் - 9095632063 </td>
 			<td>12:40 - 01:20</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>சேக் அப்துல்காதர் B.E - 8807137959</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -496,7 +496,7 @@
 			<td>மல்லிப்பட்டினம் - 7530007456</td>
 			<td>12:50 - 01:20</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>ஆவணம் ரியாஸ் B.Tech - 9994585432</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -543,7 +543,7 @@
 			<td>முகமது பந்தர் - 9952533238 </td>
 			<td>01:00 - 01:30</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>அப்துல் மாலிக் - 8122625262</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -591,7 +591,7 @@
 			<td>முடச்சிக்காடு - 9600508045</td>
 			<td>12:45 - 01:15</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>அஷ்ரஃப் அலீ M.Sc - 6382546220</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -639,7 +639,7 @@
 			<td>ஒரத்தநாடு - 7539991654</td>
 			<td>01:00 - 01:30</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>அதிரை ஹபிபு ரஹ்மான் - 9894906011</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -687,7 +687,7 @@
 			<td>பட்டுக்கோட்டை - 6382236258 </td>
 			<td>12:45 - 01:20</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>முகமது அதிரை - 9600649363</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -735,7 +735,7 @@
 			<td>புதுப்பட்டினம் - 7010606193</td>
 			<td>12:40 - 01:10</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>நவாப்ஷா - 8838370094</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -783,7 +783,7 @@
 			<td>RMS காலணி - 8754218549</td>
 			<td>12:30 - 01:00</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>வல்லம் ஜாபர் - 9944191505</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -831,7 +831,7 @@
 			<td>சேதுபாவா சத்திரம் - 9488584934 </td>
 			<td>12:45 - 01:30</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>பாரீஸ் B.Sc - 8270912463</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -879,7 +879,7 @@
 			<td>செந்தலை - 9688845638</td>
 			<td>01:10 - 01:40</td>
             <td><select>
-		  		 <option>NIL</option>
+		  		 <option class="opt">NIL</option>
 				<option>பட்டுக்கோட்டை பாரூக் - 6382236258</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -927,7 +927,7 @@
 			<td>தஞ்சை மாநகரம் - 8870799975 </td>
 			<td>12:30 - 01:00</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>ஜியாவுதீன் MBA, LLB - 9791904549</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -975,7 +975,7 @@
 			<td>திருக்காட்டுப்பள்ளி - 9952845689</td>
 			<td>01:00 - 01:30</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>இக்பால் - 8754869528</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -1023,7 +1023,7 @@
 			<td>திருப்பந்துருத்தி - 9940946309 </td>
 			<td>01:00 - 01:30</td>
 			<td><select>
-				<option>NIL</option>		
+				<option class="opt">NIL</option>		
 				<option>ஃபஜுல்ரஹ்மான் - 9491085851</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -1071,7 +1071,7 @@
 			<td>வல்லம் - 9080343595 </td>
 			<td>01:00 - 01:30</td>
             <td><select>
-		  		<option>NIL</option>
+		  		<option class="opt">NIL</option>
 				<option>அப்துல்லாஹ் - 8438236558</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -1119,7 +1119,7 @@
 			<td>பேராவூரணி - 9894887270</td>
 			<td>12:55 - 01:30</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>அப்துல் அஜீஸ் - 9363437661</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
@@ -1167,7 +1167,7 @@
 			<td>பூதலூர் - 8778891017 </td>
 			<td>01:30 - 02:00</td>
 			<td><select>
-				<option>NIL</option>
+				<option class="opt">NIL</option>
 				<option>வல்லம் பாட்சா - 9443188653</option>
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
