--- a/index.html
+++ b/index.html
@@ -53,50 +53,6 @@
 	//form validation and javascript content
 </script>
 <!-- table -->
-<script>
-var a=document.getElementById("dhayi");
-   a.insertAdjacentHTML(afterbegin,` <select>
-				<option class="opt">NILL</option>
-				<option>அம்ஜத்கான் - 9715886738</option>
-				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
-				<option>MISc Student - 8526132121</option>
-				<option>ஹஃபீல் B.Tech - 9384656794</option>
-				<option>ஆபிதீன் B.A - 9566788134</option>
-				<option>செய்யத் முஸ்தபா B.Tech - 9715113441</option>
-				<option>அப்துல் ஹமீத் - 9789704924</option>
-				<option>ஜாபர் அலி - 9361384359</option>
-				<option>சேக் அப்துல்காதர் B.E - 8807137959</option>
-				<option>ஆவணம் ரியாஸ் B.Tech - 9994585432</option>
-				<option>அப்துல் மாலிக் - 8122625262</option>
-				<option>அஷ்ரஃப் அலீ M.Sc - 6382546220</option>
-				<option>அதிரை ஹபிபு ரஹ்மான் - 9894906011</option>
-				<option>முகமது அதிரை - 9600649363</option>
-				<option>நவாப்ஷா - 8838370094</option>
-				<option>வல்லம் ஜாபர் - 9944191505</option>
-				<option>பாரீஸ் B.Sc - 8270912463</option>
-				<option>பட்டுக்கோட்டை பாரூக் - 6382236258</option>
-				<option>ஜியாவுதீன் MBA, LLB - 9791904549</option>
-				<option>இக்பால் - 8754869528</option>
-				<option>ஃபஜுல்ரஹ்மான் - 9491085851</option>
-				<option>அப்துல்லாஹ் - 8438236558</option>
-				<option>அப்துல் அஜீஸ் - 9363437661</option>
-				<option>வல்லம் பாட்சா - 9443188653</option>
-				<option>அகமது பதுருதீன் - 9500811178</option>
-				<option>இனாமுல் MISc - 9791759705</option>
-				<option>ஜுபைர் - 8012413053</option>
-				<option>முஜிபுர் ரஹ்மான் - 9994588100</option>
-				<option>நுஹ்மான் - 8870880618</option>
-				<option>பாரூக் MISc - 9994256863</option>
-				<option>ஷிஹாபுதீன் - 6381386077</option>
-				<option>ரஹீமுல்லாஹ் - 8610657269</option>
-				<option>இலியாஸ் MISc - 8668055942</option>
-				<option>ஹிதாயதுல்லஹ் - 9787537620</option>
-				<option>முகமது ஒலி - 9952056444</option>
-				<option>சபீர் அலி - 9600951725</option>
-				<option>சிக்கந்தர் - 9384357357 </option>
-				<option>பாரி  - 7094907792 </option>
-			</select>  `);
-	</script>
    <div id="content" class="print-container">
 	 	
 	<table lang="ta" align="center" >
@@ -118,7 +74,48 @@ var a=document.getElementById("dhayi");
 			<td>1.</td>
 			<td>ஆவணம் - 9566336108 </td>
 			<td >12:30 - 01:00</td>
-			<td id="dhayi"></td>
+			<td id="dhayi">
+			  <select>
+		<option class="opt">NILL</option>
+		<option>அம்ஜத்கான் - 9715886738</option>
+		<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
+		<option>MISc Student - 8526132121</option>
+		<option>ஹஃபீல் B.Tech - 9384656794</option>
+		<option>ஆபிதீன் B.A - 9566788134</option>
+		<option>செய்யத் முஸ்தபா B.Tech - 9715113441</option>
+		<option>அப்துல் ஹமீத் - 9789704924</option>
+		<option>ஜாபர் அலி - 9361384359</option>
+		<option>சேக் அப்துல்காதர் B.E - 8807137959</option>
+		<option>ஆவணம் ரியாஸ் B.Tech - 9994585432</option>
+		<option>அப்துல் மாலிக் - 8122625262</option>
+		<option>அஷ்ரஃப் அலீ M.Sc - 6382546220</option>
+		<option>அதிரை ஹபிபு ரஹ்மான் - 9894906011</option>
+		<option>முகமது அதிரை - 9600649363</option>
+		<option>நவாப்ஷா - 8838370094</option>
+		<option>வல்லம் ஜாபர் - 9944191505</option>
+		<option>பாரீஸ் B.Sc - 8270912463</option>
+		<option>பட்டுக்கோட்டை பாரூக் - 6382236258</option>
+		<option>ஜியாவுதீன் MBA, LLB - 9791904549</option>
+		<option>இக்பால் - 8754869528</option>
+		<option>ஃபஜுல்ரஹ்மான் - 9491085851</option>
+		<option>அப்துல்லாஹ் - 8438236558</option>
+		<option>அப்துல் அஜீஸ் - 9363437661</option>
+		<option>வல்லம் பாட்சா - 9443188653</option>
+		<option>அகமது பதுருதீன் - 9500811178</option>
+		<option>இனாமுல் MISc - 9791759705</option>
+		<option>ஜுபைர் - 8012413053</option>
+		<option>முஜிபுர் ரஹ்மான் - 9994588100</option>
+		<option>நுஹ்மான் - 8870880618</option>
+		<option>பாரூக் MISc - 9994256863</option>
+		<option>ஷிஹாபுதீன் - 6381386077</option>
+		<option>ரஹீமுல்லாஹ் - 8610657269</option>
+		<option>இலியாஸ் MISc - 8668055942</option>
+		<option>ஹிதாயதுல்லஹ் - 9787537620</option>
+		<option>முகமது ஒலி - 9952056444</option>
+		<option>சபீர் அலி - 9600951725</option>
+		<option>சிக்கந்தர் - 9384357357 </option>
+		<option>பாரி  - 7094907792 </option>
+			</select></td>
 		</tr>
 		<tr>
 			<td>2.</td>
