--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<td >12:30 - 01:00</td>
 			<td id="dhayi">
 			  <select>
-		<option class="opt">NILL</option>
+		<option class="opt">NIL</option>
 		<option>அம்ஜத்கான் - 9715886738</option>
 		<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
 		<option>MISc Student - 8526132121</option>
