--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 <br>
  <footer>
 	<cite style="font-weight:bolder;">  ©️ Copyright - TNTJ THANJAI SOUTH 2022</cite>
-	<a class="change" href="mailto:mohammmadibbu008@gmail.com" title="send your feedback" onclick="alert('Opening G-Mail or E-Mail...')"><em style="font-weight: bolder;">feed back?</em></a>
+	<a class="change" href="mailto:ithris615@gmail.com" title="send your feedback" onclick="alert('Opening G-Mail or E-Mail...')"><em style="font-weight: bolder;">feed back?</em></a>
 </footer> 
 </body>
 </html>
