--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- style for whole page -->
 	<link rel="stylesheet" type="text/css" href="loginpage.css">
 </head>
-<body onoffline="offline()" ononline="online()">
+<body onoffline="offline()" ononline="online()" onbeforeprint="">
  
 	<!-- loginpage -->
 	<div class="container" id="form_container">
