--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- style for whole page -->
 	<link rel="stylesheet" type="text/css" href="loginpage.css">
 </head>
-<body onoffline="offline()" ononline="online()" onbeforeprint="printing()">
+<body onoffline="offline()" ononline="online()" onafterprint="session_expired()">
  
 	<!-- loginpage -->
 	<div class="container" id="form_container">
@@ -53,6 +53,383 @@
 	//form validation and javascript content
 </script>
 <!-- table -->
+<div id="session"><i class="fa fa-spinner fa-spin"></i></div>
+   <div id="content" class="print-container">
+	 	
+	<table lang="ta" align="center" id="table">
+		<thead>
+		<tr>
+			<th colspan="4" id="tntj" ><img src="jummahheading.JPG" alt="தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம்." style="width:100%;height:150px;"></th>
+		</tr>
+		<tr>
+			<th colspan="4" id="date"><strong>ஜும்ஆ நாள் :</strong><input type="date" id="date_style" >
+			</th>
+		</tr>
+
+	<tr id="head" >
+			<th>S.NO</th>
+			<th >கிளை/பொறுப்பாளர்</th>
+			<th >நேரம்</th>
+			<th >தாஃயி பெயர்/தொடர்புக்கு</th>
+			
+		</tr>
+	</thead>
+	<tbody>
+			<tr>
+			<td>1.</td>
+			<td>ஆவணம் - 9566336108 </td>
+			<td >12:30 - 01:00</td>
+			<td id="kilai_1">
+			  </td>
+		</tr>
+		<tr>
+			<td>2.</td>
+			<td>அதிரை 1 - 9894906011</td>
+			<td>12:30 - 01:10</td>
+			<td id="kilai_2"></td>
+		</tr>
+		<tr>
+			<td>3.</td>
+			<td>அதிரை 2 - 9629533887</td>
+			<td>12:30 - 01:15</td>
+			<td id="kilai_3"></td>
+		</tr>
+		<tr>
+			<td>4.</td>
+			<td>அம்மாபேட்டை - 9952538849</td>
+			<td>12:45 - 01:15</td>
+			<td id="kilai_4"></td>
+		</tr>
+		<tr>
+			<td>5.</td>
+			<td>அம்மாபேட்டை ரயிலடி 9487910796 </td>
+			<td>12:45 - 01:15</td>
+			<td id="kilai_5"></td>
+		</tr>
+		<tr>
+			<td>6.</td>
+			<td>ஈஸ்வரி நகர் - 9791904549 </td>
+			<td>01:00 - 01:30</td>
+			<td id="kilai_6"></td>
+		</tr>
+
+		<tr>
+			<td>7.</td>
+			<td> கண்டியூர் - 8270348485</td>
+			<td>12:45 - 01:15</td>
+			<td id="kilai_7"></td>
+		</tr>
+		
+		<tr>
+			<td>8.</td>
+			<td>கருப்புர் - 9952862782 </td>
+			<td>01:10 - 01:40</td>
+			<td id="kilai_8"></td>
+		</tr>
+		
+		<tr>
+			<td>9.</td>
+			<td>மதுக்கூர் - 9095632063 </td>
+			<td>12:40 - 01:20</td>
+			<td id="kilai_9"></td>
+		</tr>
+		
+		<tr>
+			<td>10.</td>
+			<td>மல்லிப்பட்டினம் - 7530007456</td>
+			<td>12:50 - 01:20</td>
+			<td id="kilai_10"></td>
+		</tr>
+		
+		<tr>
+			<td>11.</td>
+			<td>முகமது பந்தர் - 9952533238 </td>
+			<td>01:00 - 01:30</td>
+			<td id="kilai_11"></td>
+		</tr>
+		
+		<tr>
+			<td>12.</td>
+			<td>முடச்சிக்காடு - 9600508045</td>
+			<td>12:45 - 01:15</td>
+			<td id="kilai_12"></td>
+		</tr>
+		
+		<tr>
+			<td>13.</td>
+			<td>ஒரத்தநாடு - 7539991654</td>
+			<td>01:00 - 01:30</td>
+			<td id="kilai_13"></td>
+		</tr>
+		
+		<tr>
+			<td>14.</td>
+			<td>பட்டுக்கோட்டை - 6382236258 </td>
+			<td>12:45 - 01:20</td>
+			<td id="kilai_14"></td>
+		</tr>
+		
+		<tr>
+			<td>15.</td>
+			<td>புதுப்பட்டினம் - 7010606193</td>
+			<td>12:40 - 01:10</td>
+			<td id="kilai_15"></td>
+		</tr>
+		
+		<tr>
+			<td>16.</td>
+			<td>RMS காலணி - 8754218549</td>
+			<td>12:30 - 01:00</td>
+			<td id="kilai_16"></td>
+		</tr>
+		
+		<tr>
+			<td>17.</td>
+			<td>சேதுபாவா சத்திரம் - 9488584934 </td>
+			<td>12:45 - 01:30</td>
+			<td id="kilai_17"></td>
+		</tr>
+		
+		<tr>
+			<td>18.</td>
+			<td>செந்தலை - 9688845638</td>
+			<td>01:10 - 01:40</td>
+       <td id="kilai_18"></td>
+		</tr>
+		
+		<tr>
+			<td>19.</td>
+			<td>தஞ்சை மாநகரம் - 8870799975 </td>
+			<td>12:30 - 01:00</td>
+			<td id="kilai_19"></td>
+		</tr>
+		
+		<tr>
+			<td>20.</td>
+			<td>திருக்காட்டுப்பள்ளி - 9952845689</td>
+			<td>01:00 - 01:30</td>
+			<td id="kilai_20"></td>
+		</tr>
+		
+		<tr>
+			<td>21.</td>
+			<td>திருப்பந்துருத்தி - 9940946309 </td>
+			<td>01:00 - 01:30</td>
+			<td id="kilai_21"></td>
+		</tr>
+		
+		<tr>
+			<td>22.</td>
+			<td>வல்லம் - 9080343595 </td>
+			<td>01:00 - 01:30</td>
+            <td id="kilai_22"></td>
+		</tr>
+		
+		<tr>
+			<td>23.</td>
+			<td>பேராவூரணி - 9894887270</td>
+			<td>12:55 - 01:30</td>
+			<td id="kilai_23"></td>
+		</tr>
+		
+		<tr>
+			<td>24.</td>
+			<td>பூதலூர் - 8778891017 </td>
+			<td>01:30 - 02:00</td>
+			<td id="kilai_24"></td>
+		</tr>
+		
+		
+		<tr>
+			<th colspan="4" id="tntj" >தாஃயிக்கள் தொடர்பான தகவல்களுக்கு - 9944191505</th>
+		</tr>
+<tr>
+   <th colspan="4" style="background-color: #312542;"><img src="jummah.jpg" alt="Jummah img" style="max-width:100%;height:auto;"></th>
+ </tr>
+</tbody>
+	</table>
+</div>
+<!-- END OF THE TABLE -->
+<!-- options template -->
+<script type="text/javascript">
+	// dhayi names change HERE....
+	var dhayi_names=`<select>
+        <optgroup label="---தாஃயிக்களின் பெயர்கள்---">
+        <option class="opt">NIL</option>
+    <optgroup label="--அ--">
+				<option>அப்துல் அஜீஸ் - 9363437661</option>
+				<option>அம்ஜத்கான் - 9715886738</option>
+				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
+				<option>அப்துல் ஹமீத் - 9789704924</option>
+        <option>அப்துல் மாலிக் - 8122625262</option>
+				<option>அஷ்ரஃப் அலீ M.Sc - 6382546220</option>
+				<option>அதிரை ஹபிபு ரஹ்மான் - 9894906011</option>
+        <option>அப்துல்லாஹ் - 8438236558</option>
+        <option>அகமது பதுருதீன் - 9500811178</option>
+   </optgroup>
+   
+   <optgroup label="--ஆ--">
+        <option>ஆவணம் ரியாஸ் B.Tech - 9994585432</option>
+        <option>ஆபிதீன் B.A - 9566788134</option>
+    </optgroup> 
+
+    <optgroup label="--இ--">
+        <option>இனாமுல் MISc - 9791759705</option>
+        <option>இக்பால் - 8754869528</option>
+        <option>இலியாஸ் MISc - 8668055942</option>
+</optgroup>
+
+<optgroup label="--ஃ--">
+        <option>ஃபஜுல்ரஹ்மான் - 9491085851</option>
+</optgroup>
+
+<optgroup label="--ச--">
+        <option>சபீர் அலி - 9600951725</option>
+				<option>சிக்கந்தர் - 9384357357 </option>
+        <option>செய்யத் முஸ்தபா B.Tech - 9715113441</option>
+        <option>சேக் அப்துல்காதர் B.E - 8807137959</option>
+</optgroup>
+
+<optgroup label="--ந--">
+				<option>நவாப்ஷா - 8838370094</option>
+        <option>நுஹ்மான் - 8870880618</option>
+</optgroup>
+
+<optgroup label="--ப--">
+        <option>பட்டுக்கோட்டை பாரூக் - 6382236258</option>
+				<option>பாரீஸ் B.Sc - 8270912463</option>
+				<option>பாரூக் MISc - 9994256863</option>
+				<option>பாரி  - 7094907792 </option>
+</optgroup>
+
+<optgroup label="--ம--">
+				<option>முகமது அதிரை - 9600649363</option>
+				<option>முகமது ஒலி - 9952056444</option>
+				<option>முஜிபுர் ரஹ்மான் - 9994588100</option>
+</optgroup>
+
+<optgroup label="--ர--">
+				<option>ரஹீமுல்லாஹ் - 8610657269</option>
+</optgroup>
+
+<optgroup label="--வ--">				
+				<option>வல்லம் பாட்சா - 9443188653</option>
+				<option>வல்லம் ஜாபர் - 9944191505</option>
+</optgroup>
+
+<optgroup label="--ஜ--">				
+				<option>ஜாபர் அலி - 9361384359</option>
+				<option>ஜியாவுதீன் MBA, LLB - 9791904549</option>
+				<option>ஜுபைர் - 8012413053</option>
+</optgroup>
+
+<optgroup label="--ஹ--">
+				<option>ஹிதாயதுல்லஹ் - 9787537620</option>
+				<option>ஹஃபீல் B.Tech - 9384656794</option>
+</optgroup>
+
+<optgroup label="--ஷ--">				
+				<option>ஷிஹாபுதீன் - 6381386077</option>
+	</optgroup>
+
+<optgroup label="others">
+				<option>MISc Student - 8526132121</option>
+</optgroup>
+
+     </optgroup>
+			</select>`;
+ document.getElementById("kilai_1").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_2").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_3").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_4").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_5").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_6").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_7").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_8").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_9").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_10").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_11").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_12").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_13").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_14").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_15").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_16").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_17").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_18").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_19").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_20").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_21").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_22").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_23").insertAdjacentHTML("afterbegin",dhayi_names);
+ document.getElementById("kilai_24").insertAdjacentHTML("afterbegin",dhayi_names);
+  
+ 
+</script>
+<center>
+	<button id="button" onclick="printing();">DOWNLOAD PDF!</button>
+</center>
+<br>
+ <footer>
+	<cite style="font-weight:bolder;">  ©️ Copyright - TNTJ THANJAI SOUTH 2022</cite>
+	<a class="change" href="mailto:ithris615@gmail.com" title="send your feedback" onclick="alert('Opening G-Mail or E-Mail...')"><em style="font-weight: bolder;">feed back?</em></a>
+</footer> 
+</body>
+</html><!DOCTYPE html>
+<html lang="ta">
+<head>
+	<meta charset="utf-8">
+	   <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    <meta name="viewport" content="width=1024">
+   <title>Jummah chart</title>
+  <!--  login page loading style -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- google fonts link -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<!-- font style Tiro -->
+<link href="https://fonts.googleapis.com/css2?family=Tiro+Tamil:ital@1&display=swap" rel="stylesheet">
+
+<!-- <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet"> -->
+
+<link href="https://fonts.googleapis.com/css2?family=Arima:wght@700&display=swap" rel="stylesheet">
+<!-- style for whole page -->
+	<link rel="stylesheet" type="text/css" href="loginpage.css">
+</head>
+<body onoffline="offline()" ononline="online()" onafterprint="session_expired()">
+ 
+	<!-- loginpage -->
+	<div class="container" id="form_container">
+		<!-- success message -->
+    <div id="success" >Login Successfully...  <i class="fa fa-spinner fa-spin"></i></div>
+    <!-- failed ! message -->
+		<div id="check" >Incorrect details ! <i class="fa fa-refresh fa-spin"></i></div>
+		<!-- form starting -->
+	<form class="login_form" id="form" name="form">
+	<br>
+  <label> User Name</label>
+	<br>
+	<br>
+	<input type="text" name="uname" id="uname" placeholder="User Name" required autofocus>
+	<div id="check_uname">Please enter a valid userName !</div>
+	<br>
+	<br>
+	<br>
+	<label >Password</label>
+	<br>
+	<br>
+	<input type="password" name="password" id="password" placeholder="*******" required autofocus>
+	<br>
+	<input type="checkbox" onclick="showpassword();" id="showpwd"><label id="showpwd">show password</label>
+	<div id="check_pwd">Please Enter a valid password !</div>
+	<br>
+	<button type="submit" name="submit" id="submitbtn" onclick="validate()" >Login</button>
+</form>
+</div>
+<script type="text/javascript" src="script.js">
+	//form validation and javascript content
+</script>
+<!-- table -->
+<div id="session"><i class="fa fa-spinner fa-spin"></i></div>
    <div id="content" class="print-container">
 	 	
 	<table lang="ta" align="center" id="table">
