--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	//form validation and javascript content
 </script>
 <!-- table -->
-<div id="session"><i class="fa fa-spinner fa-spin"></i></div>
+<div id="session">Your Session is About to end shortly !<i class="fa fa-spinner fa-spin"></i></div>
    <div id="content" class="print-container">
 	 	
 	<table lang="ta" align="center" id="table">
