--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- style for whole page -->
 	<link rel="stylesheet" type="text/css" href="loginpage.css">
 </head>
-<body onoffline="offline()" ononline="online()" onafterprint="session_expired()">
+<body onoffline="offline()" ononline="online()">
  
 	<!-- loginpage -->
 	<div class="container" id="form_container">
@@ -53,7 +53,7 @@
 	//form validation and javascript content
 </script>
 <!-- table -->
-<!-- <div id="session">Your Session is About to end shortly !<i class="fa fa-spinner fa-spin"></i></div> -->
+<div id="session">Your Session is About to end shortly !<i class="fa fa-spinner fa-spin"></i></div>
    <div id="content" class="print-container">
 	 	
 	<table lang="ta" align="center" id="table">
