--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 	//form validation and javascript content
 </script>
 <!-- table -->
+<div id="offline">Check Your internet connection !</div>
+<div id="online">Back Online !</div>
 <div id="session">Your Session is About to end shortly !<i class="fa fa-spinner fa-spin"></i></div>
    <div id="content" class="print-container">
 	 	
