--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
    <title>Jummah chart</title>
   <!--  login page loading style -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Check online or offline -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <!-- google fonts link -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,8 +55,8 @@
 	//form validation and javascript content
 </script>
 <!-- table -->
-<div id="offline">Check Your internet connection !</div>
-<div id="online">Back Online !</div>
+<div id="offline"><i class="fa fa-warning"></i>  No Network Connection !</div>
+<div id="online"><i class="fa fa-globe"></i>  Back Online !</div>
 <div id="session">Your Session is About to end shortly !<i class="fa fa-spinner fa-spin"></i></div>
    <div id="content" class="print-container">
 	 	
