--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 	<button id="button" onclick="printing();">DOWNLOAD PDF!</button>
 </center>
 <br>
- <footer>
+ <footer style="font-family: 'Tiro Tamil', serif;">
 	<cite style="font-weight:bolder;">  ©️ Copyright - TNTJ THANJAI SOUTH 2022</cite>
 	<a class="change" href="mailto:ithris615@gmail.com" title="send your feedback" onclick="alert('Opening G-Mail or E-Mail...')"><em style="font-weight: bolder;">feed back?</em></a>
 </footer> 
