--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <label> User Name</label>
 	<br>
 	<br>
-	<input type="text" name="uname" id="uname" placeholder="User Name" required autofocus>
+	<input type="text" name="uname" id="uname" placeholder="User Name" maxlength="10" required autofocus>
 	<div id="check_uname">Please enter a valid userName !</div>
 	<br>
 	<br>
@@ -43,7 +43,7 @@
 	<label >Password</label>
 	<br>
 	<br>
-	<input type="password" name="password" id="password" placeholder="*******" required autofocus>
+	<input type="password" name="password" id="password" placeholder="*******" maxlength="10" required>
 	<br>
 	<input type="checkbox" onclick="showpassword();" id="showpwd"><label id="showpwd">show password</label>
 	<div id="check_pwd">Please Enter a valid password !</div>
