--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <label> User Name</label>
 	<br>
 	<br>
-	<input type="text" name="uname" id="uname" placeholder="User Name" maxlength="10" required autofocus>
+	<input type="text" name="uname" id="uname" placeholder="Enter UserName" maxlength="10" required autofocus>
 	<div id="check_uname">Please enter a valid userName !</div>
 	<br>
 	<br>
