--- a/index.html
+++ b/index.html
@@ -265,11 +265,12 @@
 				<option>அம்ஜத்கான் - 9715886738</option>
 				<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
 				<option>அப்துல் ஹமீத் - 9789704924</option>
-        <option>அப்துல் மாலிக் - 8122625262</option>
+				<option>அப்துல் மாலிக் - 8122625262</option>
 				<option>அஷ்ரஃப் அலீ M.Sc - 6382546220</option>
 				<option>அதிரை ஹபிபு ரஹ்மான் - 9894906011</option>
-        <option>அப்துல்லாஹ் - 8438236558</option>
-        <option>அகமது பதுருதீன் - 9500811178</option>
+				<option>அப்துல்லாஹ் - 8438236558</option>
+				<option>அகமது பதுருதீன் - 9500811178</option>
+				<option>அப்துல் ரசீது - 7358860163</option>
    </optgroup>
    
    <optgroup label="--ஆ--">
@@ -288,22 +289,24 @@
 </optgroup>
 
 <optgroup label="--ச--">
-        <option>சபீர் அலி - 9600951725</option>
-				<option>சிக்கந்தர் - 9384357357 </option>
+        <option>சபீர் அலி MISc - 9600951725</option>
+	<option>சலீம் MISc - 9500796289</option>
+	<option>சிக்கந்தர் - 9384357357 </option>
         <option>செய்யத் முஸ்தபா B.Tech - 9715113441</option>
         <option>சேக் அப்துல்காதர் B.E - 8807137959</option>
 </optgroup>
 
 <optgroup label="--ந--">
-				<option>நவாப்ஷா - 8838370094</option>
+		<option>நவாப்ஷா - 8838370094</option>
         <option>நுஹ்மான் - 8870880618</option>
 </optgroup>
 
 <optgroup label="--ப--">
         <option>பட்டுக்கோட்டை பாரூக் - 6382236258</option>
-				<option>பாரீஸ் B.Sc - 8270912463</option>
-				<option>பாரூக் MISc - 9994256863</option>
-				<option>பாரி  - 7094907792 </option>
+		<option>பாரீஸ் B.Sc - 8270912463</option>
+		<option>பாரூக் MISc - 9994256863</option>
+		<option>பாரி  - 7094907792 </option>
+		<option>பக்கீர் முகமது - 9994469222</option>
 </optgroup>
 
 <optgroup label="--ம--">
@@ -330,6 +333,7 @@
 <optgroup label="--ஹ--">
 				<option>ஹிதாயதுல்லஹ் - 9787537620</option>
 				<option>ஹஃபீல் B.Tech - 9384656794</option>
+				<option>ஹபிப் புதுப்பட்டினம் - 9486605911</option>
 </optgroup>
 
 <optgroup label="--ஷ--">				
@@ -338,6 +342,15 @@
 
 <optgroup label="others">
 				<option>MISc Student - 8526132121</option>
+</optgroup>
+
+<optgroup label="மைசூர்">
+				<option>மைசூர் அஜீஸ் MISC - 9384703198</option>
+				<option>மைசூர் முஸ்தாக் அலி	8748858287</option>
+				<option>மைசூர் லுக்மான் MISC - 8508923310</option>
+				<option>மைசூர் சலீம் IC - 9500796289</option>
+				<option>மைசூர் ரஹ்மதுல்லாஹ் IC - 9150409571</option>
+				<option>மைசூர் இலியாஸ் MISC - 7200387307</option>
 </optgroup>
 
      </optgroup>
@@ -374,8 +387,8 @@
 </center>
 <br>
  <footer style="font-family: 'Tiro Tamil', serif;">
-	<cite style="font-weight:bolder;">  ©️ Copyright - TNTJ THANJAI SOUTH 2022</cite>
-	<a class="change" href="mailto:ithris615@gmail.com" title="send your feedback" onclick="alert('Opening G-Mail or E-Mail...')"><em style="font-weight: bolder;">feed back?</em></a>
+	<cite style="font-weight:bolder;">  ©️ Copyright 2022 TNTJ THANJAI SOUTH </cite>
+	<a class="change" href="mailto:ithris615@yahoo.com" title="send your feedback" onclick="alert('Opening G-Mail or E-Mail...')"><em style="font-weight: bolder;">feed back?</em></a>
 </footer> 
 </body>
 </html>
