--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
 <optgroup label="--ஜ--">				
 				<option>ஜாபர் அலி - 9361384359</option>
-				<option>ஜியாவுதீன் MBA, LLB - 9791904549</option>
+				<option>ஜியாவுதீன் MBA, <ruby>LLB<rt>————</rt></ruby> - 9791904549</option>
 				<option>ஜுபைர் - 8012413053</option>
 </optgroup>
 
