--- a/index.html
+++ b/index.html
@@ -255,100 +255,110 @@
 </div>
 <!-- END OF THE TABLE -->
 <!-- options template -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript">
+	//remove duplicate values.....
+$(document).ready(function(){
+$('select').on('change', function(event ) {
+   var prevValue = $(this).data('previous');
+$('select').not(this).find('option[value="'+prevValue+'"]').show();    
+   var value = $(this).val();
+  $(this).data('previous',value); $('select').not(this).find('option[value="'+value+'"]').attr('disabled', 'disabled');
+});
+});
 	// dhayi names change HERE....
 	var dhayi_names=`<select>
         <optgroup label="---தாஃயிக்களின் பெயர்கள்---">
         <option class="opt">NIL</option>
    <optgroup label="--அ--">
-	<option>அப்துல் அஜீஸ் - 9363437661</option>
-	<option>அம்ஜத்கான் - 9715886738</option>
-	<option>அப்துர்ரஹ்மான் பா - 9363692343</option>
-	<option>அப்துர்ரஹ்மான் முத்துப்பேட்டை - 8098032083</option>
-	<option>அப்துல் ஹமீத் - 9789704924</option>
-	<option>அப்துல் மாலிக் - 8122625262</option>
-	<option>அப்துல்லாஹ் - 8438236558</option>
-	<option>அப்துல் ரசீது MISc - 7358860163</option>
-	<option>அஷ்ரஃப் அலீ M.Sc - 6382546220</option>
-	<option>அதிரை ஹபிபு ரஹ்மான் - 9894906011</option>
-	<option>அகமது பதுருதீன் - 9500811178</option>
-	<option>அன்சர் MISc  - 6383280448</option>
-	<option>அராஃபத் - 9585758578</option>
+	<option value="1">அப்துல் அஜீஸ் - 9363437661</option>
+	<option value="2">அம்ஜத்கான் - 9715886738</option>
+	<option value="3">அப்துர்ரஹ்மான் பா - 9363692343</option>
+	<option value="4">அப்துர்ரஹ்மான் முத்துப்பேட்டை - 8098032083</option>
+	<option value="5">அப்துல் ஹமீத் - 9789704924</option>
+	<option value="6">அப்துல் மாலிக் - 8122625262</option>
+	<option value="7">அப்துல்லாஹ் - 8438236558</option>
+	<option value="8">அப்துல் ரசீது MISc - 7358860163</option>
+	<option value="9">அஷ்ரஃப் அலீ M.Sc - 6382546220</option>
+	<option value="10">அதிரை ஹபிபு ரஹ்மான் - 9894906011</option>
+	<option value="11">அகமது பதுருதீன் - 9500811178</option>
+	<option value="12">அன்சர் MISc  - 6383280448</option>
+	<option value="13">அராஃபத் - 9585758578</option>
    </optgroup>
    
 <optgroup label="--ஆ--">
-        <option>ஆவணம் ரியாஸ் B.Tech - 9994585432</option>
-        <option>ஆபிதீன் B.A - 9566788134</option>
+        <option value="14">ஆவணம் ரியாஸ் B.Tech - 9994585432</option>
+        <option value="15">ஆபிதீன் B.A - 9566788134</option>
 </optgroup> 
 
 <optgroup label="--இ--">
-        <option>இனாமுல் MISc - 9791759705</option>
-        <option>இக்பால் - 8754869528</option>
-        <option>இலியாஸ் MISc - 8668055942</option>
+        <option value="16">இனாமுல் MISc - 9791759705</option>
+        <option value="17">இக்பால் - 8754869528</option>
+        <option value="18">இலியாஸ் MISc - 8668055942</option>
 </optgroup>
 
 <optgroup label="--ஃ--">
-        <option>ஃபஜுல்ரஹ்மான் - 9491085851</option>
+        <option value="19">ஃபஜுல்ரஹ்மான் - 9491085851</option>
 </optgroup>
 
 <optgroup label="--ச--">
-        <option>சபீர் அலி MISc - 9600951725</option>
-	<option>சலீம் MISc - 9500796289</option>
-	<option>சிக்கந்தர் - 9384357357 </option>
-        <option>செய்யத் முஸ்தபா B.Tech - 9715113441</option>
-        <option>சேக் அப்துல்காதர் B.E - 8807137959</option>
+        <option value="20">சபீர் அலி MISc - 9600951725</option>
+	<option value="21">சலீம் MISc - 9500796289</option>
+	<option value="22">சிக்கந்தர் - 9384357357 </option>
+        <option value="23">செய்யத் முஸ்தபா B.Tech - 9715113441</option>
+        <option value="24">சேக் அப்துல்காதர் B.E - 8807137959</option>
 </optgroup>
 
 <optgroup label="--த--">
-	<option>தவ்ஃபீக் இமாம் - 9751872376</option>
+	<option value="25">தவ்ஃபீக் இமாம் - 9751872376</option>
 </optgroup>
 <optgroup label="--ந--">
-	<option>நவாப்ஷா - 8838370094</option>
-        <option>நுஹ்மான் - 8870880618</option>
+	<option value="26">நவாப்ஷா - 8838370094</option>
+        <option value="27">நுஹ்மான் - 8870880618</option>
 </optgroup>
 
 <optgroup label="--ப--">
-        <option>பட்டுக்கோட்டை பாரூக் - 6382236258</option>
-		<option>பாரீஸ் B.Sc - 8270912463</option>
-		<option>பாரூக் MISc - 9994256863</option>
-		<option>பாரி  - 7094907792 </option>
-		<option>பக்கீர் முகமது - 9994469222</option>
-		<option>பஷீர்  - 9944884147</option>
+        <option value="28">பட்டுக்கோட்டை பாரூக் - 6382236258</option>
+		<option value="29">பாரீஸ் B.Sc - 8270912463</option>
+		<option value="30">பாரூக் MISc - 9994256863</option>
+		<option value="31">பாரி  - 7094907792 </option>
+		<option value="32">பக்கீர் முகமது - 9994469222</option>
+		<option value="33">பஷீர்  - 9944884147</option>
 </optgroup>
 
 <optgroup label="--ம--">
-		<option>முகமது அதிரை - 9600649363</option>
-		<option>முகமது ஒலி - 9952056444</option>
-		<option>முஜிபுர் ரஹ்மான் - 9994588100</option>
+		<option value="34">முகமது அதிரை - 9600649363</option>
+		<option value="35">முகமது ஒலி - 9952056444</option>
+		<option value="36">முஜிபுர் ரஹ்மான் - 9994588100</option>
 </optgroup>
 
 <optgroup label="--ர--">
-		<option>ரஹீமுல்லாஹ் - 8610657269</option>
+		<option value="37">ரஹீமுல்லாஹ் - 8610657269</option>
 </optgroup>
 
 <optgroup label="--வ--">				
-		<option>வல்லம் பாட்சா - 9443188653</option>
-		<option>வல்லம் ஜாபர் - 9944191505</option>
+		<option value="38">வல்லம் பாட்சா - 9443188653</option>
+		<option value="39">வல்லம் ஜாபர் - 9944191505</option>
 </optgroup>
 
 <optgroup label="--ஜ--">				
-		<option>ஜாபர் அலி - 9361384359</option>
-		<option>ஜியாவுதீன் MBA, LLB - 9791904549</option>
-		<option>ஜுபைர் DME - 8012413053</option>
+		<option value="40">ஜாபர் அலி - 9361384359</option>
+		<option value="41">ஜியாவுதீன் MBA, LLB - 9791904549</option>
+		<option value="42">ஜுபைர் DME - 8012413053</option>
 </optgroup>
 
 <optgroup label="--ஹ--">
-		<option>ஹிதாயதுல்லஹ் - 9787537620</option>
-		<option>ஹஃபீல் B.Tech - 9384656794</option>
-		<option>ஹபிப் புதுப்பட்டினம் - 9486605911</option>
+		<option value="43">ஹிதாயதுல்லஹ் - 9787537620</option>
+		<option value="44">ஹஃபீல் B.Tech - 9384656794</option>
+		<option value="45">ஹபிப் புதுப்பட்டினம் - 9486605911</option>
 </optgroup>
 
 <optgroup label="--ஷ--">				
-		<option>ஷிஹாபுதீன் - 6381386077</option>
+		<option value="46">ஷிஹாபுதீன் - 6381386077</option>
 </optgroup>
 
 <optgroup label="others">
-		<option>MISc Student - 8526132121</option>
+		<option value="47">MISc Student - 8526132121</option>
 </optgroup>
 
 </optgroup>
