--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </form>
 </div>
 <script type="text/javascript" src="script.js">
-	//form validation and javascript content
+	//login authentication and javascript content
 </script>
 <!-- table -->
 <div id="offline"><i class="fa fa-warning"></i>  No Network Connection !</div>
@@ -66,8 +66,8 @@
 			<th colspan="4" ><img src="jummahheading.jpg" alt="தமிழ்நாடு தவ்ஹீத் ஜமாஅத் - தஞ்சை தெற்கு மாவட்டம் ஜும்ஆ தாயிக்களின் விபரம்." style="width:100%;height:135px;"></th>
 		</tr>
 		<tr>
-			<th colspan="4" id="date"><strong> ஜும்மா தாயிக்களின் விபரம் </strong><input type="date" id="date_style" >
-			</th>
+			<th colspan="4" id="date"><strong> ஜும்மா தாயிக்களின் விபரம் </strong><input type="date"
+        placeholder="dd-mm-yyyy" min="2022-01-01" max="2050-12-31" id="date_style" ></th>
 		</tr>
 
 	<tr id="head" >
@@ -258,6 +258,7 @@
 <!-- jquery -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript">
+
  //remove duplicate values........
 $(document).ready(function(){
 $('select').on('change', function(event ) {
