--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=1024">
 <title>Jummah chart</title>
 <!--  login page loading style -->
+<link rel="website icon" type="png" href="tntj">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Check online or offline -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -67,7 +68,7 @@
 		</tr>
 		<tr>
 			<th colspan="4" id="date"><strong> ஜும்மா தாயிக்களின் விபரம் </strong><input type="date"
-        placeholder="dd-mm-yyyy" min="2022-01-01" max="2050-12-31" id="date_style" ></th>
+        placeholder="dd-mm-yyyy" min="2022-01-01" max="2030-12-31" id="date_style" ></th>
 		</tr>
 
 	<tr id="head" >
