--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- style for whole page -->
 	<link rel="stylesheet" type="text/css" href="loginpage.css">
 </head>
-<body onoffline="offline()" ononline="online()" onload="autoclick();">
+<body onoffline="offline()" ononline="online()">
  
 	<!-- loginpage -->
 	<div class="container" id="form_container">
@@ -59,7 +59,7 @@
 <div id="online"><i class="fa fa-globe"></i>  Back Online !</div>
 <div id="session">Your Session is About to end shortly !<i class="fa fa-spinner fa-spin"></i></div>
    <div id="content" class="print-container">
-	 	
+	<div id="jummahchartjpg"> 	
 	<table lang="ta" align="center" id="table">
 		<thead>
 		<tr>
@@ -251,7 +251,7 @@
    <th colspan="4" style="background-color: #312542;"><img src="jummah.jpg" alt="Jummah img" style="max-width:100%;height:auto;"></th>
  </tr>
 </tbody>
-	</table>
+	</table></div>
 </div><br><br>
 <a id="dwnld">Download image</a> 
 <!-- END OF THE TABLE -->
