--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 </tbody>
 	</table></div>
 </div><br><br>
-<a id="dwnld">Download image</a> 
+<a id="dwnld" style="display:none" >Download image</a> 
 <!-- END OF THE TABLE -->
 <!-- options template -->
 <!-- jquery -->
