--- a/index.html
+++ b/index.html
@@ -252,8 +252,9 @@
  </tr>
 </tbody>
 	</table></div>
+<a id="dwnld"  >Download image</a> 
 </div><br><br>
-<a id="dwnld" style="display:none" >Download image</a> 
+
 <!-- END OF THE TABLE -->
 <!-- options template -->
 <!-- jquery -->
