--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ function autoClick(){
         $("#dwnld").click();
       }
       $(document).ready(function(){
-        var element = $("#content");
+        var element = $("#jummahchartjpg");
 
         $("#dwnld").on('click', function(){
 
