--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div id="online"><i class="fa fa-globe"></i>  Back Online !</div>
 <div id="session">Your Session is About to end shortly !<i class="fa fa-spinner fa-spin"></i></div>
    <div id="content" class="print-container">
-	<div id="jummahchartjpg"> 	
+	<!-- <div id="jummahchartjpg"> -->	
 	<table lang="ta" align="center" id="table">
 		<thead>
 		<tr>
@@ -251,8 +251,8 @@
    <th colspan="4" style="background-color: #312542;"><img src="jummah.jpg" alt="Jummah img" style="max-width:100%;height:auto;"></th>
  </tr>
 </tbody>
-	</table></div>
-<a id="dwnld"  >Download image</a> 
+	</table><!--</div>
+<a id="dwnld"  >Download image</a> -->
 </div><br><br>
 
 <!-- END OF THE TABLE -->
